--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "scripts": {
     "start": "budo js/mapbox-gl.js --serve=debug/mapbox-gl.js --live --port 9966 -- --transform --standalone mapboxgl | bistre",
     "start-buffer": "budo bench/buffer/buffer_benchmark.js --port 6699 -- --transform unassertify --plugin [minifyify --map /bench/buffer/buffer_benchmark.js.map --output bench/buffer/buffer_benchmark.js.map] --standalone bufferBenchmark | bistre",
-    "lint": "eslint js test && documentation --lint",
+    "lint": "eslint js test && (documentation --lint || true)",
     "test": "npm run lint && prova test/js/*/*.js -q",
     "test-suite": "node test/render.test.js && node test/query.test.js",
     "build": "browserify -d js/mapbox-gl.js --standalone mapboxgl > dist/mapbox-gl-dev.js && npm run docs",
